# TurboLoader

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_V2.md  BENCHMARK_REPORT.md  BENCHMARK_RESULTS_V0.7.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPLETION_SUMMARY.md  DESIGN.md  DETAILED_DOCUMENTATION.txt  FINAL_BENCHMARK_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  ISSUE_V2.0.md  LICENSE  MANIFEST.in  PIPELINE_ARCHITECTURE.md  PUBLICATION_CHECKLIST.md  PUBLICATION_STATUS.md  PYPI_RELEASE_GUIDE.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASING.md  STATUS.md  TRANSFORMS_IMPLEMENTATION_SUMMARY.md  V0.8.0_RELEASE_SUMMARY.md  benchmark_app.html  benchmark_data.json  benchmark_pytorch_tar.py  benchmark_results.json  benchmark_server.py  benchmark_turboloader_tar.py  pyproject.toml  setup.py  setup_v2.py  simple_benchmark.py  test_pipeline_simple.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-wheels.yml  claude-review.yml  publish.yml  test.yml
benchmarks/: 01_pil_baseline.py  02_pytorch_naive.py  03_pytorch_optimized.py  04_pytorch_cached.py  05_turboloader.py  06_ffcv.py  07_dali.py  08_tensorflow.py  09_resnet50_training.py  BENCHMARK_PLAN.md  CMakeLists.txt  E2E_TRAINING_RESULTS.md  METAL_RESIDENT_RESULTS.md  VIDEO_RESULTS.md  basic_benchmark.cpp  benchmark_e2e_training.py  benchmark_fastdataloader.py  benchmark_metal_resident.py  benchmark_metal_video.py  benchmark_simd.cpp  benchmark_v2_pipeline.cpp  benchmark_video_standards.py  comprehensive_benchmark.py  final_comprehensive_benchmark.py  generate_web_data.py  multiformat_benchmark.cpp  run_all_benchmarks.py
benchmarks/datasets/: generate_synthetic.py
benchmarks/memory/: bench_memory.py
benchmarks/results/: all_results.json
benchmarks/results/memory/: memory.json
benchmarks/results/reports/: benchmark_report_20251130_170901.txt  benchmark_report_20251130_171033.txt  benchmark_report_20251130_172330.txt  benchmark_report_20251130_183944.txt  benchmark_report_20251130_190214.txt
benchmarks/results/throughput/: pytorch.json  turboloader.json
benchmarks/results/transforms/: transforms.json
benchmarks/throughput/: bench_pytorch.py  bench_tbl_v2.py  bench_turboloader.py  bench_webdataset.py
benchmarks/transforms/: bench_transforms.py
benchmarks/visualization/: plot_results.py
benchmarks/webapp/: benchmark_app.html  benchmark_results.json  run_benchmark.py
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  CONVERTER_BENCHMARK_RESULTS.txt  GPU.md  GPU_ACCELERATION.md  INTEGRATION.md  MEDIUM_PRIORITY_PLAN.md  NON_IMAGE_DATA.md  PERFORMANCE.md  QUICK_COMPARISON.md  README.md  TROUBLESHOOTING.md  V0.3.0_DESIGN.md  V0.3.0_RELEASE_NOTES.md  architecture.md  benchmark_setup.md  distributed.md  getting-started.md  index.md  installation.md  quickstart.md  transforms_guide.md
docs/api/: index.md  pipeline.md  transforms.md
docs/benchmarks/: index.md
docs/development/: contributing.md
docs/guides/: avx512-simd.md  pytorch-integration.md  tbl-format.md  tensorflow-integration.md
examples/: basic_usage.cpp  compare_dataloaders.py  distributed_ddp.py  example_v2.py  finetune_resnet_residentloader.py  imagenet_resnet50.py  pytorch_lightning_example.py  pytorch_replacement_example.py  quickstart.ipynb  resnet50_training.py  simple_imagenet.py  train_gpt_tokenloader.py  turboloader_quickstart.ipynb
experiments/cuda/: RESULTS.md  benchmark_cuda.py  ffcv_benchmark.py
experiments/metal/: README.md  benchmark_gpu_loader.py  e2e_decode_transform.mm  hybrid_jpeg_decode.mm  metal_resize.mm
python/: CMakeLists.txt  benchmark_simple.py  benchmark_vs_pytorch.py  jax_dataloader.py  tensorflow_dataloader.py  test_bindings.py  turboloader_py.cpp  webdataset_loader.py
scripts/: build_macos_deps.sh  download_cifar.py  download_coco.py  download_imagenet.py  generate_benchmark_charts.py  generate_benchmark_dataset.py  generate_benchmark_report.py  generate_multiformat_test_data.py  generate_test_data.py  generate_test_data_simple.py  verify_installation.py
src/cache/: cache_key.hpp
src/core/: buffer_pool.hpp  compat.hpp  parallel_for.hpp  thread_pool.cpp
src/core_v2/: object_pool.hpp  sample_v2.hpp  spsc_ring_buffer.hpp
src/cuda/: cuda_transforms.cu  cuda_transforms.hpp
src/decode/: bmp_decoder.hpp  image_decoder.hpp  jpeg_decoder.hpp  nvjpeg_decoder.hpp  png_decoder.hpp  tiff_decoder.hpp  webp_decoder.hpp
src/decode_v2/: jpeg_decoder_v2.hpp
src/distributed/: distributed_dataloader.hpp  sharding_strategies.hpp
src/io_v2/: tar_reader_v2.hpp
src/metal/: metal_decode.mm  metal_transforms.hpp  metal_transforms.mm  metal_video.hpp  metal_video.mm
src/pipeline/: checkpointing.hpp  direct_batch_loader.hpp  gpu_prefetch.hpp  pipeline.cpp  pipeline.hpp  smart_batching.hpp
tests/: CMakeLists.txt  TEST_SUMMARY_v0.5.2.md  create_test_dataset.py  test_audit_fixes.py  test_buffer_pool.cpp  test_cov_init_modality.py  test_cov_init_paths.py  test_cov_label_extractors.py  test_cov_pytorch_loader.py  test_cov_sequence.py  test_cuda.py  test_cuda_video.py  test_decode.py  test_decode_failures_observable.py  test_epoch_shuffle.py  test_fastpath_transforms.py  test_framework_tensors.py  test_loader_close.py  test_map_loader.py  test_metal.py  test_metal_decode_robust.py  test_metal_resident.py  test_metal_video.py  test_neon_bounds.cpp  test_pinned_ring.py  test_pytorch_compat.py  test_sharding_strategies.cpp  test_simd_bilinear.cpp  test_state_dict_resume.py  test_streaming_prefetch.py  test_tar_reader.cpp  test_train_aug.py  test_transforms.cpp  test_v180_features.py  test_v190_features.py  test_v250_features.py  test_v260_features.py  test_v270_features.py  test_webdataset_integration.py
tests/v2/: test_jpeg_decoder.cpp  test_phase1  test_phase1.cpp  test_pipeline.cpp  test_spsc_ring_buffer.cpp  test_tar_reader  test_tar_reader.cpp
tools/: tar_to_tbl.cpp  tar_to_tbl_v2.cpp
turboloader/: __init__.py  _augment.py  cuda_loader.py  cuda_video.py  gpu_loader.py  metal_loader.py  pytorch_compat.py  sequence.py  webdataset.py
web_app/: README.md  app.py  requirements.txt
(+16 files in other folders)
