[build-system]
requires = ["setuptools>=77", "wheel", "pybind11>=2.10.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "turboloader"
# Version is derived automatically from the git tag (vX.Y.Z) by setuptools_scm —
# never edit it by hand. See [tool.setuptools_scm] below and RELEASING.md.
dynamic = ["version"]
description = "High-performance ML data loading: C++20 core with SIMD-accelerated transforms, pipe-operator composition, TBL v2 format, and a PyTorch-compatible DataLoader."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Arnav Jain"}
]
maintainers = [
    {name = "Arnav Jain"}
]
keywords = [
    "machine-learning",
    "deep-learning",
    "data-loading",
    "pytorch",
    "performance",
    "simd",
    "imagenet",
    "computer-vision"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "numpy>=1.19.0",
    "torch>=1.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.900",
    "build>=0.7.0",
    "twine>=3.4.0"
]
benchmarks = [
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "matplotlib>=3.3.0",
    "psutil>=5.8.0"
]
all = [
    "turboloader[dev,benchmarks]"
]

[project.urls]
Homepage = "https://github.com/ALJainProjects/TurboLoader"
Documentation = "https://github.com/ALJainProjects/TurboLoader/blob/main/README.md"
Repository = "https://github.com/ALJainProjects/TurboLoader"
"Bug Tracker" = "https://github.com/ALJainProjects/TurboLoader/issues"
Changelog = "https://github.com/ALJainProjects/TurboLoader/blob/main/CHANGELOG.md"
Discussions = "https://github.com/ALJainProjects/TurboLoader/discussions"

[tool.setuptools]
packages = ["turboloader"]

[tool.setuptools_scm]
# Single source of truth for the version: the git tag. Writes the resolved version to
# turboloader/_version.py (imported by __init__ and read by setup.py for the C++
# -DTURBOLOADER_VERSION macro). fallback_version is used in a tarball with no git/tag.
version_file = "turboloader/_version.py"
fallback_version = "2.26.0"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | \.eggs
  | \.mypy_cache
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
